Mon Aug 17 08:14:26 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_rationalize) added.  [experimental]

	* rational.c ({nurat,nilclass,integer,float}_rationalize) ditto.

Mon Aug 17 08:11:53 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb: use num#i.

Mon Aug 17 07:59:00 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (flo_pow,fix_pow): may return complex number.

	* bignum.c (rb_big_pow): ditto.

Mon Aug 17 07:16:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_imaginary): num#i to return imaginary counterpart
	  of the given numeric.

	* complex.c (Init_Complex): undef #i for complex numbers.

Mon Aug 17 00:17:33 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/complex.rb, lib/rational.rb: added warning messages.

Sun Aug 16 23:58:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yylex): should dispatch scan-event even when follows
	  just after delayed-token.  [ruby-dev:37855] [Bug #1071]

Sun Aug 16 22:20:16 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: reverted.

Sun Aug 16 21:31:21 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/date/format.rb: suppressed a warning.

	* lib/irb/ruby-lex.rb: ditto.

Sun Aug 16 15:25:26 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/csv.rb: Change magic comment to US-ASCII in order to
	  make literals as US-ASCII.

Sun Aug 16 10:45:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regparse.c (parse_char_class, parse_exp, parse_branch),
	  (parse_subexp): fixed memory leak.  a patch from Ralf Junker
	  <ralfjunker AT gmx.de> at [ruby-core:24921].

Sun Aug 16 10:38:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_backtrace_each, vm_backtrace_push),
	  vm_eval.c (print_backtrace), vm_dump.c (bugreport_backtrace):
	  rb_backtrace_iter_func now takes VALUE as file and method names.

Sun Aug 16 03:06:59 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (opt_eq_func): fix optimization bug.  This issue